--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="manifest" href="manifest.json">
     </head>
     <body>
+        
         <header class="bg-primary-una text-white py-3">
             <img src="img/imagen1.png" class="img-fluid centered-image">
             <div class="container text-center">
@@ -28,6 +29,8 @@
             </section>
             <section>
                 <!--ELEMENTOS DINAMICOS DE LA APP-->
+                <div id="modal-container"></div>
+
             </section>
 
         </main>
