--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/services/task_service.js"></script>
+        <script src="js/ws.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
