--- a/index.html
+++ b/index.html
@@ -7,40 +7,59 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
         <link href="css/styles.css" rel="stylesheet">
-       <!--Link del manifiesto JSON--> 
-        <link rel="manifest" href="manifest.json">
+        <link href="manifest.json" rel="manifest" >
     </head>
     <body>
-        
-        <header class="bg-primary-una text-white py-3">
-            <img src="img/imagen1.png" class="img-fluid centered-image">
-            <div class="container text-center">
-                <h2>Mis tareas</h2>
-            </div>
-        </header>
-        <main class="container flex-grow-1">
-            <section class="mt-2 mb-4">
-                <div class="input-group">
-                    <input type="text" id="new-task" class="form-control" 
-                        placeholder="Agregar nueva tarea"/>
-                    <button id="add-task-button" class="btn btn-primary">
-                        <i class='bx bxs-alarm-add fs-1' ></i></button>
+        <div class="main-content" id="main-content" >
+            <header class="bg-primary-una text-white py-3" id="header" >
+                <img src="img/imagen1.png" class="img-fluid centered-image">
+                <div class="container text-center">
+                    <h2>Mis tareas</h2>
                 </div>
-            </section>
-            <section>
-                <!--ELEMENTOS DINAMICOS DE LA APP-->
-                <div id="modal-container"></div>
-
-            </section>
-
-        </main>
-        <footer class="bg-primary-una text-white py-3">
-            <div class="container text-center">
+            </header>
+            <main class="container flex-grow-1">
+                <section class="mt-2 mb-4">
+                    <div class="input-group">
+                        <input type="text" id="new-task" class="form-control" 
+                            placeholder="Agregar nueva tarea"/>
+                        <button id="add-task-button" class="btn btn-primary">
+                            <i class='bx bxs-alarm-add fs-1' ></i></button>
+                    </div>
+                </section>
+                <section>
+                    <!--ELEMENTOS DINAMICOS DE LA APP-->
+                <div id="modal-container" ></div> 
+                </section>
+            </main>
+            <footer class="bg-primary-una text-white py-3">
+                <div class="container text-center">
+                    <p>&copy;2024 Universidad Nacional</p>
+                </div>
+            </footer>            
+        </div>
+        <div class="login" id="login">
+            <div class="login-container">
+                <img src="/img/imagen1.png" alt="Logo Universidad Nacional" class="img-fluid">
+                <h2>UNA TASK</h2>
+                <form id="login-form">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1"><i class='bx bx-envelope'></i></span>
+                        <input type="email" id="email" name="email" class="form-control" placeholder="Correo" required>
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text" id="basic-addon1"><i class='bx bx-lock'></i></span>
+                        <input type="text" id="password" name="password" class="form-control" placeholder="Contraseña" required>
+                    </div>
+                    <button type="submit" class="btn btn-custom btn-block">
+                        INGRESAR <i class='bx bx-log-in'></i> 
+                    </button>
+                </form>
                 <p>&copy;2024 Universidad Nacional</p>
-            </div>
-        </footer>
+            </div>            
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/services/task_service.js"></script>
+        <script src="js/services/user_service.js"></script>
         <script src="js/ws.js"></script>
         <script src="js/app.js"></script>
     </body>
